--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 }
            </style>
 
-           <div class = "message"x-text ="message">
+           <div x-show = "message>0" class = "message"x-text ="message">
               You will be greeted here.
            </div>
            <label for="name"> Please enter your Name</label>
