--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     padding: 1em;
                     border-radius: 1em;
                 }
+                .widgets2{
+                    display: flex;
+                }
             </style>
 
             <div x-show="message.length >0 " class="message" x-text="message">
@@ -98,31 +101,33 @@
     </div>
 
 
-    <div class="widget"  x-data="{
+    <div class=widgets2>
+
+        <div class="widget" x-data="{
               airtimeUsage: '',
                airtimeMessage: '',
                calculate1(){
                this.airtimeMessage = totalPhoneBill(this.airtimeUsage)
             }
            }">
-        <h2>Total phone bill</h2>
-        <div class="inputString ">
-            <label for="callSmsString"> Please enter string 'call, sms, call, sms, sms':</label>
-            <input type="text" id="callSmsString" x-model="airtimeUsage">
+            <h2>Total phone bill</h2>
+            <div class="inputString ">
+                <label for="callSmsString"> Please enter string 'call, sms, call, sms, sms':</label>
+                <input type="text" id="callSmsString" x-model="airtimeUsage">
+            </div>
+
+            <div class="message" x-text="airtimeMessage">
+                totalPhoneBill will be displayed here ...
+            </div>
+            <div>
+                <button x-on:click="calculate1">Calculate airtime usage</button>
+            </div>
         </div>
 
-        <div class="message" x-text="airtimeMessage">
-            totalPhoneBill will be displayed here ...
-        </div>
-        <div>
-            <button x-on:click="calculate1">Calculate airtime usage</button>
-        </div>
-    </div>
 
 
 
-
-    <div x-data = "{
+        <!-- <div x-data = "{
           shift: 'Hlanganani',
          feeMessage: '',
         transportFee(){
@@ -150,34 +155,35 @@
                   transportFee will be displayed here ...
             </template>
         </div>
-    </div>
+    </div> -->
 
 
 
 
 
-    <div class="widget" x-data="{
+        <div class="widget" x-data="{
          sentence:'',
          Message: '',
          calculate2(){
          this.Message = longestword(this.sentence)
         }
         }">
-        <h2>Word game</h2>
-         <br>
-        
-       <div class=" strMessage">
-      <label for= "strMsg">Enter longest word</label>
-      <input type="text" id="strMsg" x-model= "sentence">
-       </div>
+            <h2>Word game</h2>
+            <br>
 
-      <div class="message" x-text="Message">
-       Longest word results will be displayed here..
-      </div>
-       <div>
-      <button x-on:click="calculate2"> Start WordCrush</button>
-         </div>
-   </div>
+            <div class=" strMessage">
+                <label for="strMsg">Enter longest word</label>
+                <input type="text" id="strMsg" x-model="sentence">
+            </div>
+
+            <div class="message" x-text="Message">
+                Longest word results will be displayed here..
+            </div>
+            <div>
+                <button x-on:click="calculate2"> Start WordCrush</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
