--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 
     <div Class="widgets">
 
+<!-- 
+         <div class="widget" x-data="greetWidget">
 
-        <div class="widget" x-data="greetWidget">
-            <h2>My greet widget</h2>
+            <h2>My greet widget</h2> -->
             <style>
                 /* body{
                     color: yellowgreen !important;
@@ -88,24 +89,23 @@
                     background-attachment: fixed;
                 }
 
-                /* body {
-  height: 100%;
-  background-image: linear-gradient(hsl(10,90,66), transparent 70%);
-  background-size: 100% 100%;
-  mix-blend-mode: difference;
-  } */
+                    /* body {
+                      height: 100%;
+                      background-image: linear-gradient(hsl(10,90,66), transparent 70%);
+                           background-size: 100% 100%;
+                          mix-blend-mode: difference;
+                    } */
             </style>
-        <div class = "widget" x-data ="{
-                 
-                  
-             }">
+            <!-- <h1 x-text="name"></h1>
             <div x-show="message.length >0 " class="message" x-text="message">
                 You will be greeted here.
             </div>
             <label for="name"> Please enter your Name</label>
             <input type="text" id="name" x-model="name">
             <button x-on:click="greetMe">Greet!</button>
-        </div>
+        </div> -->
+
+
 
         <div class="widget" x-data="{
         airtimeUsage: '',
