--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
             <h2>My greet widget</h2> -->
             <style>
-                /* body{
-                    color: yellowgreen !important;
-                } */
+                body{
+                    color: red !important;
+                }
                 .message {
                     padding: 1em;
                     /* background-color: lightblue; */
@@ -66,7 +66,7 @@
                     margin: 1em;
                     padding: 1em;
                     border-radius: 1em;
-                    background-color: white;
+                    background-color:brown transparent;
 
                 }
 
