--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     </div>
 
 
-    <div class=widgets2>
+    <div class= "widgets2" >
 
         <div class="widget" x-data="{
               airtimeUsage: '',
@@ -145,7 +145,7 @@
             }
            }">
             <h2>Total phone bill</h2>
-            <div class="inputString ">
+            <div class="input ">
                 <label for="callSmsString"> Please enter string 'call, sms, call, sms, sms':</label>
                 <input type="text" id="callSmsString" x-model="airtimeUsage">
             </div>
@@ -206,8 +206,8 @@
             <h2>Word game -Longest word</h2>
             <br>
 
-            <div class=" strMessage">
-                <label for="strMsg">Pleasse Enter sentence:</label>
+            <div class="input ">
+                <label for="strMsg">Please Enter sentence:</label>
                 <input type="text" id="strMsg" x-model="sentence">
             </div>
 
@@ -234,7 +234,7 @@
             <h2>Word game - Word Lengths</h2>
             <br>
 
-            <div class=" strMessage">
+            <div class="input ">
                 <label for="strMsg">Please enter sentence:</label>
                 <input type="text" id="strMsg" x-model="sentence">
             </div>
@@ -267,7 +267,7 @@
             <h2>Word game - Shortest word</h2>
             <br>
 
-            <div class=" strMessage">
+            <div class="input ">
                 <label for="strMsg">Please enter sentence:</label>
                 <input type="text" id="strMsg" x-model="sentence">
             </div>
