--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
             <h2>My greet widget</h2> -->
             <style>
                 body{
-                    color: red !important;
+                    color: whitesmoke !important;
                 }
                 .message {
                     padding: 1em;
-                    /* background-color: lightblue; */
+                     background-color: whitesmoke;
                     margin-bottom: 1em;
                 }
 
@@ -66,7 +66,9 @@
                     margin: 1em;
                     padding: 1em;
                     border-radius: 1em;
-                    background-color:brown transparent;
+                    background-color:brown ;
+                    opacity:0.777;
+                    
 
                 }
 
