--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     padding: 1em;
                      background-color: whitesmoke;
                     margin-bottom: 1em;
+                    color: black !important;
                 }
 
                 .input>label {
