--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <div class=widgets2>
 
-        <div class="widget" x-data="lengthWidget">
+        <div class="widget" x-data="lengthWidged">
             <h2>Word game - Word Lengths</h2>
             <br>
 
