--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     
     <script src="wordCrushWordLengths.js"></script>
-    <script src="wordLenghtCrushAlpine.js"></script>
+    <script src="wordlenghtCrushAlpine.js"></script>
 
     <script src="wordCrushShortestWord.js"></script>
     <script src="wordCrushShortestWordAlpine.js"></script>
